objects/vlocity_ins__Picklist__c.object
<CustomObject>
    <description>Vlocity Picklists are reusable lists of values used for validating attributes or custom UI pick list controls.</description>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>The code name of the Vlocity Picklist. Used to identify the picklist across systems.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <description>Data type of the values in this picklist: text, number, date, date/time or boolean.</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Vlocity Picklist. Used to identify the Vlocity Picklist across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique picklist identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsShared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Identifies whether the values for this picklist are enumerated, defined by ranges or defined by a query.</description>
        <label>Picklist Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enumerated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasureName__c</fullName>
        <label>Unit Of Measure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Picklist</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>